[package]
name = "yari-cli"
version = "0.1.6"
description = "Command line interface for YARI."
authors = ["Matej Kastak <matej.kastak@avast.com>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "3.2.17", features = ["cargo"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
rustyline = "10.0.0"
yari-sys = { path = "../yari-sys" }

[[bin]]
name = "yari"
path = "src/main.rs"
