[package]
name = "yari-cli"
version = "0.2.1"
description = "Command line interface for YARI."
authors = ["Matej Kastak <matej.kastak@avast.com>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.1.14", features = ["cargo"] }
color-eyre = "0.6.2"
env_logger = "0.10.2"
log = "0.4.21"
rustyline = { version = "14.0.0", default-features = false }
yari-sys = { path = "../yari-sys" }

[[bin]]
name = "yari"
path = "src/main.rs"
