[package]
name = "yari-py"
version = "0.2.1"
description = "Python bindings for YARI."
authors = ["Matej Kastak <matej.kastak@avast.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "yari"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
yari-sys = { path = "../yari-sys" }
