[package]
name = "yari-sys"
version = "0.1.4"
authors = ["Matej Kastak <matej.kastak@avast.com>"]
description = "YARA Interactive debugger."
edition = "2021"
license = "MIT"
include = ["LICENSE-THIRD-PARTY"]

[dependencies]
log = "0.4.17"
nom = "7.1.1"
regex = "1.6.0"
thiserror = "1.0.32"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.60.1"

[features]
all_modules = []
avast = ["all_modules"]

[dev-dependencies]
env_logger = "0.9.0"
